--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,7 +12,7 @@ h1 {
 }
 
 label {
-font-weight: 600;
+      font-weight: 600;
 }
 
 .container {
@@ -57,6 +57,7 @@ button:hover{
 }
 
 #weatherResult {
+      display: none; /* Initially hidden */
       margin-top: 1.5rem;
       font-size: 1.1rem;
       background-color: #e0f7fa;
