--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -83,6 +83,10 @@ input:focus {
       border-left: 5px solid #085B68;
       animation: fadeIn 0.5s ease-in-out;
 }
+#weatherResult p {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
 
 @keyframes fadeIn {
       from {
